# narrative-ai

./: .example.env  .gitignore  CHANGELOG.md  JinaToolAsync.py  LICENSE  README.md  agent_team.py  dockerfile  fix_brave_tool.py  fix_jina_tool.py  hello.py  instructions.py  narrativeai_run.py  playground.py  post_gen_agent.py  post_gen_app.py  pyproject.toml  requirements.txt  structured_models.py
brave-api/: pyproject.toml
depreciated/: post_gen_team_app.py
