[project]
name = "narrative-ai"
version = "0.9.1"
authors = [{name = "Omar Nahdi", email = "omarnahdi.ai@gmail.com"}]
maintainers = [{name = "Omar Nahdi", email = "omarnahdi.ai@gmail.com"}]
description = "An intelligent LinkedIn post generator powered by AI agents. This system uses Gemini, Brave Search, and web scraping to create engaging, research-backed professional content tailored to your audience and tone."
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno==2.0.11",
    "beautifulsoup4==4.13.4",
    "brave-search @ git+https://github.com/omarnahdi/brave-api-fix.git",
    "ddgs>=9.6.0",
    "fastapi>=0.116.1",
    "google-genai==1.26.0",
    "httpx==0.28.1",
    "jira>=3.10.5",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.41",
    "uvicorn>=0.35.0",
]

